unpackaged/main/default/objects/cmbls__Loan_Servicing_Triggers__c/cmbls__Loan_Servicing_Triggers__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Loan Servicing Triggers</label>
</CustomObject>