unpackaged/main/default/objects/cmbls__Loan_Servicing_Triggers__c/fields/Disable_Additional_GL_Trans_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Additional_GL_Trans_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disable Additional GL Transactions creation trigger, the new Additional GL Transaction records will not be created when an Intercompany Transaction status is updated to "Paid"</inlineHelpText>
    <label>Disable Additional GL Trans. Trigger</label>
    <type>Checkbox</type>
</CustomField>