unpackaged/main/default/objects/cmbls__Loan_Servicing_Triggers__c/fields/Disable_Custom_Repayment_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Custom_Repayment_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Custom Repayment Trigger</label>
    <type>Checkbox</type>
</CustomField>