unpackaged/main/default/objects/cmbls__Loan_Servicing_Triggers__c/fields/Disable_GL_Transactions_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_GL_Transactions_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable GL Transactions Trigger</label>
    <type>Checkbox</type>
</CustomField>